force-app/main/default/objects/Cotation__c/Cotation__c.object-meta.xml
<CustomObject>
    <label>Cotation</label>
    <nameField>
        <label>Cotation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cotations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>