force-app/main/default/objects/Cotation__c/fields/Autres_Marchandises__c.field-meta.xml
<CustomField>
    <fullName>Autres_Marchandises__c</fullName>
    <label>Autres Marchandises</label>
    <length>255</length>
    <type>Text</type>
</CustomField>