force-app/main/default/objects/Cotation__c/fields/Bon_pour_accord__c.field-meta.xml
<CustomField>
    <fullName>Bon_pour_accord__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bon pour accord</label>
    <type>Checkbox</type>
</CustomField>