force-app/main/default/objects/Cotation__c/fields/Conditions_de_reglement__c.field-meta.xml
<CustomField>
    <fullName>Conditions_de_reglement__c</fullName>
    <formula>TEXT( Opportunite__r.Account.Conditions_de_reglement__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conditions de réglement</label>
    <type>Text</type>
</CustomField>