force-app/main/default/objects/Cotation__c/fields/Conditions_generales_FR__c.field-meta.xml
<CustomField>
    <fullName>Conditions_generales_FR__c</fullName>
    <label>Conditions générales FR</label>
    <type>TextArea</type>
</CustomField>