force-app/main/default/objects/Cotation__c/fields/Conditions_particulieres__c.field-meta.xml
<CustomField>
    <fullName>Conditions_particulieres__c</fullName>
    <label>Conditions particulières</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>