force-app/main/default/objects/Cotation__c/fields/Cotation_Number__c.field-meta.xml
<CustomField>
    <fullName>Cotation_Number__c</fullName>
    <label>Cotation Number</label>
    <type>AutoNumber</type>
</CustomField>