force-app/main/default/objects/Cotation__c/fields/Date_de_validite__c.field-meta.xml
<CustomField>
    <fullName>Date_de_validite__c</fullName>
    <label>Date de validité</label>
    <type>Date</type>
</CustomField>