force-app/main/default/objects/Cotation__c/fields/Declarations_d_honneur__c.field-meta.xml
<CustomField>
    <fullName>Declarations_d_honneur__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Déclarations d’honneur</label>
    <type>Checkbox</type>
</CustomField>