force-app/main/default/objects/Cotation__c/fields/Destination1__c.field-meta.xml
<CustomField>
    <fullName>Destination1__c</fullName>
    <label>Destination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>