force-app/main/default/objects/Cotation__c/fields/Entrees_douanieres__c.field-meta.xml
<CustomField>
    <fullName>Entrees_douanieres__c</fullName>
    <label>Entrées douanières</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>