force-app/main/default/objects/Cotation__c/fields/Escale__c.field-meta.xml
<CustomField>
    <fullName>Escale__c</fullName>
    <label>Escale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>