force-app/main/default/objects/Cotation__c/fields/Etape__c.field-meta.xml
<CustomField>
    <fullName>Etape__c</fullName>
    <label>Étape</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nouvelle</fullName>
                <default>true</default>
                <label>Nouvelle</label>
            </value>
            <value>
                <fullName>Négociation</fullName>
            </value>
            <value>
                <fullName>Bon pour accord</fullName>
            </value>
            <value>
                <fullName>Exploitation</fullName>
            </value>
            <value>
                <fullName>Cloturée Perdue</fullName>
            </value>
            <value>
                <fullName>Cloturée Gagnée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>