force-app/main/default/objects/Cotation__c/fields/Frequence__c.field-meta.xml
<CustomField>
    <fullName>Frequence__c</fullName>
    <label>Fréquence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>