force-app/main/default/objects/Cotation__c/fields/General_Conditions_EN__c.field-meta.xml
<CustomField>
    <fullName>General_Conditions_EN__c</fullName>
    <label>General Conditions EN</label>
    <type>TextArea</type>
</CustomField>