force-app/main/default/objects/Cotation__c/fields/Gerbable__c.field-meta.xml
<CustomField>
    <fullName>Gerbable__c</fullName>
    <label>Gerbable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>