force-app/main/default/objects/Cotation__c/fields/Groupage__c.field-meta.xml
<CustomField>
    <fullName>Groupage__c</fullName>
    <label>Groupage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maritime</fullName>
            </value>
            <value>
                <fullName>Routier</fullName>
            </value>
            <value>
                <fullName>Aérien</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>