force-app/main/default/objects/Cotation__c/fields/Honoraire_et_bareme__c.field-meta.xml
<CustomField>
    <fullName>Honoraire_et_bareme__c</fullName>
    <label>Honoraire et barème</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>