force-app/main/default/objects/Cotation__c/fields/Incoterm__c.field-meta.xml
<CustomField>
    <fullName>Incoterm__c</fullName>
    <label>Incoterm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CFR Coût et Fret</fullName>
            </value>
            <value>
                <fullName>CIF Coût, Assurance et Fret</fullName>
            </value>
            <value>
                <fullName>CIP Paid to Port payé, assurance comprise, jusqu’à</fullName>
            </value>
            <value>
                <fullName>CPT Port payé jusqu’à</fullName>
            </value>
            <value>
                <fullName>DAP Rendu au lieu de destination convenu</fullName>
            </value>
            <value>
                <fullName>DAT Rendu au terminal</fullName>
            </value>
            <value>
                <fullName>DDP Rendu droits acquittés</fullName>
            </value>
            <value>
                <fullName>EXW À l’usine</fullName>
            </value>
            <value>
                <fullName>FAS Franco le long du navire</fullName>
            </value>
            <value>
                <fullName>FCA Franco transporteur</fullName>
            </value>
            <value>
                <fullName>FOB Franco à bord</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>