force-app/main/default/objects/Cotation__c/fields/Informations_d_expeditions__c.field-meta.xml
<CustomField>
    <fullName>Informations_d_expeditions__c</fullName>
    <label>Informations d’expéditions</label>
    <type>TextArea</type>
</CustomField>