force-app/main/default/objects/Cotation__c/fields/isSentEmail__c.field-meta.xml
<CustomField>
    <fullName>isSentEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>En Negotiation</label>
    <type>Checkbox</type>
</CustomField>