force-app/main/default/objects/Cotation__c/fields/Jours_sans_changement_de_status__c.field-meta.xml
<CustomField>
    <fullName>Jours_sans_changement_de_status__c</fullName>
    <formula>TODAY() -  Last_status_change__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Jours sans changement de status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>