force-app/main/default/objects/Cotation__c/fields/Langue_des_conditions_generales__c.field-meta.xml
<CustomField>
    <fullName>Langue_des_conditions_generales__c</fullName>
    <label>Langue des conditions générales</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>EN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>