force-app/main/default/objects/Cotation__c/fields/Last_status_change__c.field-meta.xml
<CustomField>
    <fullName>Last_status_change__c</fullName>
    <label>Last status change</label>
    <type>Date</type>
</CustomField>