force-app/main/default/objects/Cotation__c/fields/Lignes_de_facture__c.field-meta.xml
<CustomField>
    <fullName>Lignes_de_facture__c</fullName>
    <label>Lignes de facture</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>