force-app/main/default/objects/Cotation__c/fields/Marchandises__c.field-meta.xml
<CustomField>
    <fullName>Marchandises__c</fullName>
    <label>Marchandises</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Cargo</fullName>
            </value>
            <value>
                <fullName>DGR Goods</fullName>
            </value>
            <value>
                <fullName>Périssable</fullName>
            </value>
            <value>
                <fullName>Pharma</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>