force-app/main/default/objects/Cotation__c/fields/Mode_de_reglement__c.field-meta.xml
<CustomField>
    <fullName>Mode_de_reglement__c</fullName>
    <formula>TEXT(Opportunite__r.Account.Mode_de_reglement__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mode de règlement</label>
    <type>Text</type>
</CustomField>