force-app/main/default/objects/Cotation__c/fields/Motif_de_perte__c.field-meta.xml
<CustomField>
    <fullName>Motif_de_perte__c</fullName>
    <label>Motif de perte</label>
    <length>255</length>
    <type>Text</type>
</CustomField>