force-app/main/default/objects/Cotation__c/fields/Niveau_de_service__c.field-meta.xml
<CustomField>
    <fullName>Niveau_de_service__c</fullName>
    <label>Niveau de service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>AOG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>