force-app/main/default/objects/Cotation__c/fields/Nombre_d_article__c.field-meta.xml
<CustomField>
    <fullName>Nombre_d_article__c</fullName>
    <label>Nombre d&apos;article</label>
    <summaryForeignKey>Ligne_de_cotation__c.Cotation__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>