force-app/main/default/objects/Cotation__c/fields/Nombre_d_escale__c.field-meta.xml
<CustomField>
    <fullName>Nombre_d_escale__c</fullName>
    <label>Nombre d&apos;escale</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>