force-app/main/default/objects/Cotation__c/fields/Nombre_d_operation_d_exploitation__c.field-meta.xml
<CustomField>
    <fullName>Nombre_d_operation_d_exploitation__c</fullName>
    <label>Nombre d&apos;opération d&apos;exploitation</label>
    <summaryForeignKey>Exploitation__c.Cotation__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>