force-app/main/default/objects/Cotation__c/fields/Nombre_total_de_colis__c.field-meta.xml
<CustomField>
    <fullName>Nombre_total_de_colis__c</fullName>
    <label>Nombre total de colis</label>
    <summarizedField>Support__c.Nombre_de_colis__c</summarizedField>
    <summaryForeignKey>Support__c.Cotation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>