force-app/main/default/objects/Cotation__c/fields/Partenaire_d_achat__c.field-meta.xml
<CustomField>
    <fullName>Partenaire_d_achat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partenaire d&apos;achat</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cotations</relationshipLabel>
    <relationshipName>Cotations</relationshipName>
    <type>Lookup</type>
</CustomField>