force-app/main/default/objects/Cotation__c/fields/Plafond__c.field-meta.xml
<CustomField>
    <fullName>Plafond__c</fullName>
    <formula>Opportunite__r.Account.Plafond__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plafond</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>