force-app/main/default/objects/Cotation__c/fields/Statut_d_approbation__c.field-meta.xml
<CustomField>
    <fullName>Statut_d_approbation__c</fullName>
    <label>Statut d’approbation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>En cours d’approbation</fullName>
            </value>
            <value>
                <fullName>Approuvé</fullName>
            </value>
            <value>
                <fullName>Rejeté</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>