force-app/main/default/objects/Cotation__c/fields/TECH_Cnsnt_de_calcul_Chargeable_value__c.field-meta.xml
<CustomField>
    <fullName>TECH_Cnsnt_de_calcul_Chargeable_value__c</fullName>
    <formula>CASE(
    TEXT(Type_d_exp_dition__c),
    &quot;Groupage&quot;, 1000,
    &quot;Conteneur complet&quot;, 0,
    &quot;Groupage gerbable&quot;, 330,
    &quot;Groupage non gerbable&quot;, 1750,
    &quot;Remorque complète&quot;, 0,
    &quot;Groupage express&quot;, 200,
    &quot;Groupage cargo&quot;, 167,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Constante</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>