force-app/main/default/objects/Cotation__c/fields/Temps_de_transit_arrive__c.field-meta.xml
<CustomField>
    <fullName>Temps_de_transit_arrive__c</fullName>
    <label>Temps de transit : arrivé</label>
    <type>DateTime</type>
</CustomField>