force-app/main/default/objects/Cotation__c/fields/Temps_de_transit_depart__c.field-meta.xml
<CustomField>
    <fullName>Temps_de_transit_depart__c</fullName>
    <label>Temps de transit : départ</label>
    <type>DateTime</type>
</CustomField>