force-app/main/default/objects/Cotation__c/fields/Temps_de_transit_estime__c.field-meta.xml
<CustomField>
    <fullName>Temps_de_transit_estime__c</fullName>
    <label>Temps de transit estimé</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>