force-app/main/default/objects/Cotation__c/fields/Termes_de_reglement__c.field-meta.xml
<CustomField>
    <fullName>Termes_de_reglement__c</fullName>
    <formula>TEXT( Opportunite__r.Account.Termes_de_Reglement__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Termes de règlement</label>
    <type>Text</type>
</CustomField>