force-app/main/default/objects/Cotation__c/fields/Total_des_frais_locaux__c.field-meta.xml
<CustomField>
    <fullName>Total_des_frais_locaux__c</fullName>
    <label>Total des frais locaux</label>
    <summarizedField>Exploitation__c.Frais_Locaux__c</summarizedField>
    <summaryForeignKey>Exploitation__c.Cotation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>