force-app/main/default/objects/Cotation__c/fields/Transit_service_annexe__c.field-meta.xml
<CustomField>
    <fullName>Transit_service_annexe__c</fullName>
    <label>Transit (service annexe)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>