force-app/main/default/objects/Cotation__c/fields/Type_d_exp_dition__c.field-meta.xml
<CustomField>
    <fullName>Type_d_exp_dition__c</fullName>
    <label>Type d&apos;expédition</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_de_service__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Groupage</fullName>
            </value>
            <value>
                <fullName>Conteneur complet</fullName>
            </value>
            <value>
                <fullName>Groupage gerbable</fullName>
            </value>
            <value>
                <fullName>Groupage non gerbable</fullName>
            </value>
            <value>
                <fullName>Remorque complète</fullName>
            </value>
            <value>
                <fullName>Groupage express</fullName>
            </value>
            <value>
                <fullName>Groupage cargo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>