force-app/main/default/objects/Cotation__c/fields/Type_de_service__c.field-meta.xml
<CustomField>
    <fullName>Type_de_service__c</fullName>
    <label>Type de service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fret Maritime</fullName>
            </value>
            <value>
                <fullName>Fret Aérien</fullName>
            </value>
            <value>
                <fullName>Fret Routier</fullName>
            </value>
            <value>
                <fullName>Transit</fullName>
            </value>
            <value>
                <fullName>Logistique</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>