force-app/main/default/objects/Cotation__c/fields/Type_de_transit_estime__c.field-meta.xml
<CustomField>
    <fullName>Type_de_transit_estime__c</fullName>
    <label>Type de transit estimé</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Indirect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>