force-app/main/default/objects/Cotation__c/fields/Type_de_transport__c.field-meta.xml
<CustomField>
    <fullName>Type_de_transport__c</fullName>
    <label>Trafic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Import</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
            <value>
                <fullName>Import / Export</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>