force-app/main/default/objects/Cotation__c/fields/Unite_time__c.field-meta.xml
<CustomField>
    <fullName>Unite_time__c</fullName>
    <label>Unite time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Heure</fullName>
            </value>
            <value>
                <fullName>Jour</fullName>
            </value>
            <value>
                <fullName>Semaine</fullName>
            </value>
            <value>
                <fullName>Mois</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>