force-app/main/default/objects/Cotation__c/fields/Valeur_des_marchandises__c.field-meta.xml
<CustomField>
    <fullName>Valeur_des_marchandises__c</fullName>
    <label>Valeur des marchandises</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>