force-app/main/default/objects/Cotation__c/fields/Volume__c.field-meta.xml
<CustomField>
    <fullName>Volume__c</fullName>
    <label>Volume (m³)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>