force-app/main/default/objects/Cotation__c/fields/Volume_realise__c.field-meta.xml
<CustomField>
    <fullName>Volume_realise__c</fullName>
    <label>Volume réalisé (m³)</label>
    <summarizedField>Exploitation__c.Volume__c</summarizedField>
    <summaryForeignKey>Exploitation__c.Cotation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>