force-app/main/default/objects/Cotation__c/validationRules/Validate_Currency.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Currency</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT($User.Bypass_VR__c),
    ISCHANGED( CurrencyIsoCode ),
     Bon_pour_accord__c  = TRUE
)</errorConditionFormula>
    <errorMessage>Impossible de modifier la devise pour une cotation ayant un bon pour accord.</errorMessage>
</ValidationRule>