force-app/main/default/objects/Cotation__c/validationRules/Validate_Nombre_Escales.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Nombre_Escales</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT( $User.Bypass_VR__c ),
    ISPICKVAL( Escale__c , &quot;Oui&quot;),
    ISBLANK( Nombre_d_escale__c )
)</errorConditionFormula>
    <errorMessage>Veuillez renseigner le champ &apos;Nombre d&apos;escale&apos;.</errorMessage>
</ValidationRule>