force-app/main/default/objects/Cotation__c/validationRules/Validate_Type_de_service.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Type_de_service</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT( $User.Bypass_VR__c ),
    ISPICKVAL( Statut_d_approbation__c , &quot;Approuvé&quot;),
    ISCHANGED( Type_de_service__c )
)</errorConditionFormula>
    <errorMessage>Type de service ne peut pas être modifié après approbation.</errorMessage>
</ValidationRule>