force-app/main/default/objects/Cotation__c/validationRules/Validation_Transit_Direct.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Transit_Direct</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 NOT( $User.Bypass_VR__c ),
 ISPICKVAL(Type_de_transit_estime__c, &quot;Direct&quot;),
        OR(
            ISPICKVAL(Unite_time__c, &quot;&quot;), 
            ISBLANK(Temps_de_transit_estime__c))
    )</errorConditionFormula>
    <errorMessage>Les champs Unit time et transit Time doivent être renseignés (Transit Direct).</errorMessage>
</ValidationRule>