force-app/main/default/objects/Cotation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Etape__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>